--- a/Linkedin job post finder/requirements.txt
+++ b/Linkedin job post finder/requirements.txt
@@ -1,7 +1,10 @@
-requests==2.31.0
-beautifulsoup4==4.12.2
-pandas==2.1.4
-streamlit==1.29.0
-gspread==5.12.0
+selenium==4.18.1
+beautifulsoup4==4.12.3
+pandas==2.2.1
+geopy==2.4.1
+gspread==5.12.4
 oauth2client==4.1.3
-python-dotenv==1.0.0 
+gspread-dataframe==3.3.1
+requests==2.31.0
+python-dotenv==1.0.1
+webdriver-manager==4.0.1 
