--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,17 +32,25 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install selenium beautifulsoup4 pandas geopy gspread oauth2client gspread-dataframe
+        # Install core dependencies
+        pip install selenium beautifulsoup4 pandas geopy gspread oauth2client gspread-dataframe requests python-dotenv webdriver-manager
+        # Verify installations
+        pip list
 
     - name: Install Chrome
       run: |
         sudo apt-get update
         sudo apt-get install -y chromium-browser
         sudo apt-get install -y chromium-chromedriver
+        # Verify Chrome installation
+        chromium-browser --version
+        chromium-chromedriver --version
 
     - name: Create credentials file
       run: |
         echo '${{ secrets.GOOGLE_CREDENTIALS }}' > credentials.json
+        # Verify credentials file
+        ls -la credentials.json
 
     - name: Run scraper
       run: |
@@ -69,6 +77,8 @@ jobs:
         echo "Status: ${{ job.status }}" >> logs/summary.txt
         echo "Location: ${{ github.event.inputs.location }}" >> logs/summary.txt
         echo "Keywords: ${{ github.event.inputs.keywords }}" >> logs/summary.txt
+        # List all files in logs directory
+        ls -la logs/
 
     - name: Notify on failure
       if: failure()
